--- a/backend/.env
+++ b/backend/.env
@@ -19,3 +19,6 @@ FRONTEND_URL=http://localhost:5173
 SPOTIFY_CLIENT_ID=your_spotify_client_id
 SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
 OPENAI_API_KEY=your_openai_api_key
+
+# Transcription Service (Python)
+TRANSCRIPTION_SERVICE_URL=http://localhost:8000
