--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,8 @@
     "simple-statistics": "^7.8.3",
     "csv-parser": "^3.0.0",
     "fast-csv": "^5.0.0",
-    "openai": "^4.20.0"
+    "openai": "^4.20.0",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
