--- a/backend/transcription-service/requirements.txt
+++ b/backend/transcription-service/requirements.txt
@@ -1,8 +1,4 @@
 fastapi>=0.115.6
 uvicorn>=0.34.0
 python-multipart>=0.0.20
-librosa>=0.10.2
-numpy>=1.26.4
-scipy>=1.14.1
-soundfile>=0.12.1
-audioread>=3.0.0
+requests>=2.31.0
