SIMPLIFY: Integrate Klang.io directly into Node.js backend - Remove Python service dependency - Call Klang.io API directly from Node.js - Update environment variables - One service instead of two! - Add SIMPLE_DEPLOYMENT.md guide

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,7 +15,6 @@ JWT_EXPIRE=30d
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
 
-# Transcription Service (Python/Klang.io)
-# Local: http://localhost:8000
-# Production: https://spatial-ai-transcription.onrender.com
-TRANSCRIPTION_SERVICE_URL=http://localhost:8000
+# Klang.io API for Music Transcription
+# Get your API key from: https://klang.io/dashboard
+KLANG_API_KEY=0xkl-7c3da76296b2358e89c6077234506b3d
