SWITCH TO 100% FREE SOLUTION - Remove Klang.io paid API - Implement FREE built-in melody generation - No external APIs or costs - Simplify routes and remove auth middleware - Add comprehensive logging and test endpoints - Create FREE_SOLUTION.md guide

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,5 @@ JWT_EXPIRE=30d
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
 
-# Klang.io API for Music Transcription
-# Get your API key from: https://klang.io/dashboard
-KLANG_API_KEY=0xkl-7c3da76296b2358e89c6077234506b3d
+# Music Transcription
+# Uses FREE built-in algorithm - NO API KEYS NEEDED!
