--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,8 @@
     "csv-parser": "^3.0.0",
     "fast-csv": "^5.0.0",
     "openai": "^4.20.0",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "cloudinary": "^1.41.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
