--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "node ./node_modules/vite/bin/vite.js build"
 
 [build.environment]
   NODE_VERSION = "18"
