--- a/backend/package.json
+++ b/backend/package.json
@@ -11,35 +11,40 @@
     "reset-db": "node scripts/setupDatabase.js",
     "test": "jest"
   },
-  "keywords": ["spatial-ai", "music", "education", "api"],
+  "keywords": [
+    "spatial-ai",
+    "music",
+    "education",
+    "api"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "sequelize": "^6.35.0",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "fast-csv": "^5.0.0",
+    "form-data": "^4.0.0",
+    "geolib": "^3.3.4",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "ml-kmeans": "^6.0.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.20.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0",
-    "axios": "^1.6.0",
-    "geolib": "^3.3.4",
-    "ml-kmeans": "^6.0.0",
+    "sequelize": "^6.35.0",
     "simple-statistics": "^7.8.3",
-    "csv-parser": "^3.0.0",
-    "fast-csv": "^5.0.0",
-    "openai": "^4.20.0",
-    "form-data": "^4.0.0",
-    "cloudinary": "^1.41.3"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1"
   }
 }
